...
                )
                
                onRefresh?.let {
                    IconButton(
                        onClick = it,
                        modifier = Modifier.semantics { 
                            contentDescription = "Refresh community" 
                        }
                    ) {
                        Icon(
                            imageVector = Icons.Default.Refresh,
                            contentDescription = "Refresh"
                        )
...
